infra/regions/eu-north-1/envs/stg/ec2/main.tf
resource "aws_vpc_security_group_ingress_rule" "trial" {
  security_group_id = var.security_group_id

  cidr_ipv4   = "0.0.0.0/0"
  from_port   = 80
  ip_protocol = "tcp"
  to_port     = 80
}

resource "aws_vpc_security_group_ingress_rule" "trial_cluster" {
  security_group_id = var.cluster_security_group_id

  cidr_ipv4   = "0.0.0.0/0"
  from_port   = 80
  ip_protocol = "tcp"
  to_port     = 80
}

resource "aws_vpc_security_group_ingress_rule" "trial_vpc" {
  security_group_id = var.vpc_security_group_id

  cidr_ipv4   = "0.0.0.0/0"
  from_port   = 80
  ip_protocol = "tcp"
  to_port     = 80
}
